@@ -4,6 +4,7 @@ SubVersion: $Id$
 	- [roms] $1615: TiEmu retains the state of dbg windows (open/closed) now.
 	- [kevin] $1623/1624: fixed: only first 32 bytes of ram_exec were restored from savestate
 	- [kevin] $1625/1626: buffering grayscale planes to avoid blinking in double-buffered games
+	- [roms]  $1627: put all gscales extern into gscales.h
 
 - 16/07/2005, version 2.00-rc7:
 	- [roms] $1583: fixed PPhD's bug (no reload of ROM calls when upgrading)
